<resources>
    <string name="app_name">workshala2</string>
    <string name="workshala">WORKSHALA\n</string>
    <string name="what_are_yo">What are you looking for?</string>
    <string name="welcome">Welcome to</string>
    <string name="work">WORK</string>
    <string name="shala">SHALA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="able_to_run"><![CDATA[Able to run design sprint to deliver the best user experience based on research.
     \nAble to lead a team, delegate, & initiative.
     \nAble to mold the junior designer to strategize how certain feature needs to be collected.
     \nAble to aggregate and be data minded on the decision that\'s taking place.]]></string>
    <string name="experience_">Experience as UI/UX Designer for 2+ years.\nUse platform Figma. Sketch, and Miro.\nAbility to analyze and convert numerical design sprints into UI/UX\nHave experience in relevant B2C user centric products perviously.\n</string>
    <string name="google_llc_"><![CDATA[Google LLC is an American multinational technology company that focuses on search engine technology, online advertising, cloud computing.. computer software, quantum computing. e- commerce, artificial intelligence, and consumer electronics]]></string>
    <string name="english">English\n</string>
    <string name="india">India\n</string>
    <string name="some_id">#000000</string>
<!--    <string name="app_name">intershala</string>-->
    <string name="title_activity_profile">profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fav">Your Favorite</string>
    <string name="friends">Tell Your Friends</string>
    <string name="payments">Payments</string>
    <string name="setting">Settings</string>
    <string name="logout">Log Out</string>
    <string name="promotion">Promotions</string>
    <string name="error_confirm_password_title">Password does not match\n</string>
    <string name="error_confirm_password_msg">Confirm password does not match\n</string>
</resources>